--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -36,6 +36,18 @@
     "MessageKeyUpdated": "Gracias. Su clave de aficionado ha sido actualizada.",
     "MessageKeyRemoved": "Gracias. Su clave de aficionado ha sido eliminada.",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
+    "ValueTimeLimitSingleHour": "L\u00edmite de tiempo: 1 hora",
+    "ValueTimeLimitMultiHour": "L\u00edmite de tiempo: {0} horas",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "Buscar",
     "ValueDateCreated": "Fecha de creaci\u00f3n: {0}",
     "LabelArtist": "Artista",
@@ -69,12 +81,14 @@
     "ButtonAddToCollection": "Agregar a colecci\u00f3n",
     "HeaderSelectCertificatePath": "Seleccione Trayectoria del Certificado",
     "ConfirmMessageScheduledTaskButton": "Esta operaci\u00f3n normalmente es ejecutada autom\u00e1ticamente como una tarea programada. Tambi\u00e9n puede ser ejecutada manualmente desde aqu\u00ed. Para configurar la tarea programada, vea:",
-    "HeaderSupporterBenefit": "La membres\u00eda de aficionado proporciona beneficios adicionales tales como acceso a complementos premium, contenido de canales de Internet y m\u00e1s. {0}Conocer m\u00e1s{1}.",
+    "HeaderSupporterBenefit": "La membres\u00eda de aficionado proporciona beneficios adicionales tales como acceso a sincronizaci\u00f3n, complementos premium, contenido de canales de Internet y m\u00e1s. {0}Conocer m\u00e1s{1}.",
     "LabelSyncNoTargetsHelp": "Parece que actualmente no cuentas con ninguna app que soporte sinc.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Bienvenido al Panel de Control de Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Bienvenido al Cliente Web de Media Browser",
     "ButtonTakeTheTour": "Haga el recorrido",
     "HeaderWelcomeBack": "\u00a1Bienvenido nuevamente!",
+    "TitleSync": "Sinc",
+    "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Inice el tour para ver que hay de nuevo",
     "MessageNoSyncJobsFound": "No se han encontrado trabajos de sincronizaci\u00f3n. Cree trabajos de sincronizaci\u00f3n empleando los botones de Sinc que se encuentran en la intergface web.",
     "HeaderLibraryAccess": "Acceso a la Biblioteca",
@@ -95,6 +109,10 @@
     "LabelVersionInstalled": "{0} instalado",
     "LabelNumberReviews": "{0} Rese\u00f1as",
     "LabelFree": "Gratis",
+    "HeaderPlaybackError": "Playback Error",
+    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
