--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/hu.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/hu.json
@@ -1,8 +1,8 @@
 {
-    "SettingsSaved": "Seting Disimpan",
-    "AddUser": "Tambah Pengguna",
-    "Users": "Para Pengguna",
-    "Delete": "Padam",
+    "SettingsSaved": "Settings saved.",
+    "AddUser": "Add User",
+    "Users": "Users",
+    "Delete": "Delete",
     "Administrator": "Administrator",
     "Password": "Password",
     "DeleteImage": "Delete Image",
@@ -54,7 +54,7 @@
     "LabelMovie": "Movie",
     "LabelMusicVideo": "Music Video",
     "LabelEpisode": "Episode",
-    "LabelSeries": "Series",
+    "LabelSeries": "Sorozatok",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
     "LabelFailed": "(failed)",
@@ -387,7 +387,7 @@
     "TabAdvanced": "Advanced",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
+    "ButtonFullscreen": "Teljes k\u00e9perny\u0151",
     "ButtonAudioTracks": "Audio Tracks",
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
