--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -36,6 +36,18 @@
     "MessageKeyUpdated": "Grazie. La vostra chiave supporter \u00e8 stato aggiornato.",
     "MessageKeyRemoved": "Grazie. La vostra chiave supporter \u00e8 stata rimossa.",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
+    "ValueTimeLimitSingleHour": "Time limit: 1 hour",
+    "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "Ricerca",
     "ValueDateCreated": "Data di creazione {0}",
     "LabelArtist": "Artista",
@@ -69,12 +81,14 @@
     "ButtonAddToCollection": "Aggiungi alla collezione",
     "HeaderSelectCertificatePath": "Seleziona il percorso del Certificato",
     "ConfirmMessageScheduledTaskButton": "L'operazione viene normalmente eseguita come operazione pianificata. Pu\u00f2 anche essere avviata manualmente da qui. Per configurare le operazioni pianificate, vedi:",
-    "HeaderSupporterBenefit": "La sottoscrizione Supporter concede dei benefici come: l'accesso a plug-in premium, contenuti dei canali internet, e altro. {0}Scopri di pi\u00f9{1}",
+    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
     "LabelSyncNoTargetsHelp": "Sembra che al momento non avete applicazioni che supportano la sincronizzazione.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Benvenuti nel Dashboard di Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Benvenuti nel Media Browser Web client",
     "ButtonTakeTheTour": "Fai il tour",
     "HeaderWelcomeBack": "Ben tornato!",
+    "TitleSync": "Sincronizza",
+    "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Fai un tour per vedere cosa \u00e8 cambiato",
     "MessageNoSyncJobsFound": "Nessuna sincronizzazione pianificata. Creane una utilizzando i pulsanti sull'interfaccia web",
     "HeaderLibraryAccess": "Accesso libreria",
@@ -95,6 +109,10 @@
     "LabelVersionInstalled": "{0} installato",
     "LabelNumberReviews": "{0} Recensioni",
     "LabelFree": "Gratis",
+    "HeaderPlaybackError": "Playback Error",
+    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "HeaderSelectAudio": "Seleziona audio",
     "HeaderSelectSubtitles": "Seleziona sottotitoli",
     "ButtonMarkForRemoval": "Rimuovi dal dispositivo",
