--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -6,20 +6,20 @@
     "Administrator": "Administrator",
     "Password": "Passord",
     "DeleteImage": "Slett bilde",
-    "MessageThankYouForSupporting": "Thank you for supporting Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Please support Media Browser.",
+    "MessageThankYouForSupporting": "Takk for at du st\u00f8tter Media Browser.",
+    "MessagePleaseSupportMediaBrowser": "Vennligst st\u00f8tt Media Browser.",
     "DeleteImageConfirmation": "Er du sikker p\u00e5 at du vil slette bildet?",
     "FileReadCancelled": "Lesing av filen kansellert.",
     "FileNotFound": "Fil ikke funnet",
     "FileReadError": "Feil oppstod i det filen ble lest",
     "DeleteUser": "Slett bruker",
     "DeleteUserConfirmation": "Er du sikker p\u00e5 at du vil slette denne brukeren?",
-    "PasswordResetHeader": "Reset Password",
-    "PasswordResetComplete": "Passordet har blitt resatt",
-    "PinCodeResetComplete": "The pin code has been reset.",
-    "PasswordResetConfirmation": "Er du sikker p\u00e5 at du vil resette passordet?",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PasswordResetHeader": "Tilbakestill passord",
+    "PasswordResetComplete": "Passordet har blitt tilbakestilt",
+    "PinCodeResetComplete": "PIN-koden har blitt tilbakestilt",
+    "PasswordResetConfirmation": "Er du sikker p\u00e5 at du vil tilbakestille passordet?",
+    "PinCodeResetConfirmation": "Er du sikker p\u00e5 at du vil tilbakestille PIN-koden?",
+    "HeaderPinCodeReset": "Tilbakestill PIN-kode",
     "PasswordSaved": "Passord lagret",
     "PasswordMatchError": "Passord og passord-verifiseringen m\u00e5 matche",
     "OptionRelease": "Offisiell utgivelse",
@@ -36,6 +36,18 @@
     "MessageKeyUpdated": "Takk. Din supportern\u00f8kkel har blitt oppdatert.",
     "MessageKeyRemoved": "Takk. Din supportern\u00f8kkel har blitt fjernet.",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
+    "ValueTimeLimitSingleHour": "Time limit: 1 hour",
+    "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "S\u00f8k",
     "ValueDateCreated": "Dato opprettet: {0}",
     "LabelArtist": "Artist",
@@ -59,7 +71,7 @@
     "SyncJobStatusCompletedWithError": "Synkronisert med feil",
     "SyncJobItemStatusReadyToTransfer": "Klar til overf\u00f8ring",
     "LabelCollection": "Samling",
-    "HeaderAddToCollection": "Legg Til i Samling",
+    "HeaderAddToCollection": "Legg til i Samling",
     "NewCollectionNameExample": "Eksempel: Star Wars-samling",
     "OptionSearchForInternetMetadata": "S\u00f8k p\u00e5 internet for artwork og metadata",
     "LabelSelectCollection": "Velg samling:",
@@ -69,12 +81,14 @@
     "ButtonAddToCollection": "Legg til samling",
     "HeaderSelectCertificatePath": "Velg sti for sertifikat:",
     "ConfirmMessageScheduledTaskButton": "Dette kj\u00f8res vanligvis automatisk som en planlagt oppgave. Den kan ogs\u00e5 kj\u00f8res manuelt herfra. For \u00e5 konfigurere planlagte oppgaver, se:",
-    "HeaderSupporterBenefit": "St\u00f8ttemedlemskap gir ytterligere fordeler som for eksempel tilgang til premium plugins, internett-kanaler og mer. {0}L\u00e6r mer{1}.",
+    "HeaderSupporterBenefit": "St\u00f8ttemedlemskap gir ytterligere fordeler som for eksempel tilgang til synkronisering, premium plugins, internett-kanaler og mer. {0}L\u00e6r mer{1}.",
     "LabelSyncNoTargetsHelp": "Det ser ikke ut til at du har noen applikasjoner som st\u00f8tter synkronisering.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Velkommen til Media Browser Dashbord",
     "HeaderWelcomeToMediaBrowserWebClient": "Velkommen til Media Browser Webklient",
     "ButtonTakeTheTour": "Bli med p\u00e5 omvisning",
     "HeaderWelcomeBack": "Velkommen tilbake!",
+    "TitleSync": "Synk",
+    "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Ta en titt p\u00e5 hva som er nytt",
     "MessageNoSyncJobsFound": "Ingen synkroniseringsjobber funnet. Opprett en synkroniseringsjobb ved hjelp av Synkroniseringsknappene i biblioteket",
     "HeaderLibraryAccess": "Bibliotek tilgang",
@@ -95,6 +109,10 @@
     "LabelVersionInstalled": "{0} installert.",
     "LabelNumberReviews": "{0} Anmeldelser",
     "LabelFree": "Gratis",
+    "HeaderPlaybackError": "Playback Error",
+    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "HeaderSelectAudio": "Velg Lyd",
     "HeaderSelectSubtitles": "Velg Undertekst",
     "ButtonMarkForRemoval": "Fjern fra enheten.",
