--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -36,6 +36,18 @@
     "MessageKeyUpdated": "Dank u. Uw supporter sleutel is bijgewerkt.",
     "MessageKeyRemoved": "Dank u. Uw supporter sleutel is verwijderd.",
     "ErrorLaunchingChromecast": "Er is een fout opgetreden bij het starten van chromecast. Zorg ervoor dat uw apparaat is aangesloten op uw draadloze netwerk.",
+    "ValueTimeLimitSingleHour": "Tijdslimiet: 1 uur",
+    "ValueTimeLimitMultiHour": "Tijdslimiet: {0} uren",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "Zoeken",
     "ValueDateCreated": "Datum aangemaakt: {0}",
     "LabelArtist": "Artiest",
@@ -69,12 +81,14 @@
     "ButtonAddToCollection": "Voeg toe aan collectie",
     "HeaderSelectCertificatePath": "Selecteer Certificaat Pad",
     "ConfirmMessageScheduledTaskButton": "Deze operatie loopt normaal gesproken automatisch als een geplande taak. Het kan hier ook handmatig worden uitgevoerd. Om de geplande taak te configureren, zie:",
-    "HeaderSupporterBenefit": "Een supporter lidmaatschap biedt voordelen zoals toegang tot premium plug-ins, internet kanalen en meer. {0}Meer weten{1}.",
+    "HeaderSupporterBenefit": "Een supporter lidmaatschap biedt voordelen zoals toegang tot synchronisatie, premium plug-ins, internet kanalen en meer. {0}Meer weten{1}.",
     "LabelSyncNoTargetsHelp": "Het lijkt erop dat je momenteel geen apps hebt die synchroniseren ondersteunen.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Welkom bij het Media Browser Dashboard",
     "HeaderWelcomeToMediaBrowserWebClient": "Welkom op de Media Browser Web Client",
     "ButtonTakeTheTour": "Volg de tour",
     "HeaderWelcomeBack": "Welkom terug!",
+    "TitleSync": "Synchroniseer",
+    "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Volg de tour om te zien wat nieuw is",
     "MessageNoSyncJobsFound": "Geen sync opdrachten gevonden. Maak sync opdrachten via de Synchronisatie knoppen in de web interface.",
     "HeaderLibraryAccess": "Bibliotheek toegang",
@@ -95,6 +109,10 @@
     "LabelVersionInstalled": "{0} ge\u00efnstalleerd",
     "LabelNumberReviews": "{0} Recensies",
     "LabelFree": "Gratis",
+    "HeaderPlaybackError": "Playback Error",
+    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "HeaderSelectAudio": "Selecteer Audio",
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
     "ButtonMarkForRemoval": "Van apparaat verwijderen",
