--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "Spezifiziere den Pfad zum Dashboard-UI-Verzeichniss, falls der Server von der Source ausgef\u00fchrt wird. Alle Web-Client-Dateien werden von diesem Pfad aus bedient werden.",
     "ButtonConvertMedia": "Konvertiere Medien",
     "ButtonOrganize": "Organisieren",
+    "LabelPinCode": "PIN Code:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Abbrechen",
+    "ButtonExit": "Exit",
     "ButtonNew": "Neu",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Pfade",
     "CategorySync": "Synchronisieren",
     "HeaderEasyPinCode": "Einfacher PIN Code",
+    "HeaderGrownupsOnly": "Nur Erwachsene!",
+    "DividerOr": "-- oder --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Bitte geben Sie Ihren vereinfachten PIN Code ein:",
+    "KidsModeAdultInstruction": "Verwenden Sie das Schloss-Symbol in der rechten oberen Ecke um den Kindermodus zu verlassen oder zu konfigurieren. Sie ben\u00f6tigen daf\u00fcr Ihren PIN Code.",
+    "ButtonConfigurePinCode": "PIN Code festlegen",
+    "HeaderAdultsReadHere": "Eltern, bitte lesen!",
     "RegisterWithPayPal": "Registrieren mit PayPal",
     "HeaderSyncRequiresSupporterMembership": "Synchronisation ben\u00f6tigt eine Supporter-Mitgliedschaft",
     "HeaderEnjoyDayTrial": "Genie\u00dfen Sie eine 14 Tage Testversion",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Wenn aktiviert werden .rar und .zip Datei-Erweiterungen wie Medien behandelt.",
     "LabelEnterConnectUserName": "Benutzername oder Email:",
     "LabelEnterConnectUserNameHelp": "Dies ist Ihr online Media Browser Benutzername oder Passwort.",
+    "LabelEnableEnhancedMovies": "Aktiviere erweiterte Filmdarstellung.",
+    "LabelEnableEnhancedMoviesHelp": "Wenn aktiviert, werden Filme als Verzeichnisse dargestellt, welche Trailer, Extras, Besetzung & Crew sowie weitere Inhalte enth\u00e4lt.",
     "HeaderSyncJobInfo": "Synchronisations-Aufgabe",
     "FolderTypeMixed": "Gemischte Inhalte",
     "FolderTypeMovies": "Filme",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Siehe die Medienbibliothek Wiki",
     "LabelCountry": "Land:",
     "LabelLanguage": "Sprache:",
+    "LabelTimeLimitHours": "Zeitlimit (Stunden):",
     "ButtonJoinTheDevelopmentTeam": "Schlie\u00dfen Sie sich dem Entwickler-Team an",
     "HeaderPreferredMetadataLanguage": "Bevorzugte Metadata Sprache:",
     "LabelSaveLocalMetadata": "Speichere Bildmaterial und Metadaten in den Medienverzeichnissen",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Geplante Aufgaben",
     "TabMyPlugins": "Meine Plugins",
     "TabCatalog": "Katalog",
-    "PluginsTitle": "Plugins",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Automatische Updates",
     "HeaderNowPlaying": "Aktuelle Wiedergabe",
     "HeaderLatestAlbums": "Neueste Alben",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Neuer Inhalt hinzugef\u00fcgt",
     "NotificationOptionNewLibraryContentMultiple": "Neuen Inhalte hinzugef\u00fcgt (mehrere)",
     "NotificationOptionCameraImageUploaded": "Kamera Bild hochgeladen",
-    "SendNotificationHelp": "Standardm\u00e4\u00dfig werden Benachrichtigungen in der Optionsleiste angezeigt. Durchsuche den Plugin Katalog f\u00fcr die Installation von weiteren Benachrichtigungsm\u00f6glichkeiten.",
+    "NotificationOptionUserLockedOut": "Benutzer ausgeschlossen",
+    "HeaderSendNotificationHelp": "Standardm\u00e4\u00dfig werden Benachrichtigungen im Dashboard angezeigt. St\u00f6bern Sie im Plugin-Katalog um weitere Benachrichtigungsm\u00f6glichkeiten zu erhalten.",
     "NotificationOptionServerRestartRequired": "Serverneustart notwendig",
     "LabelNotificationEnabled": "Aktiviere diese Benachrichtigung",
     "LabelMonitorUsers": "\u00dcberwache Aktivit\u00e4t von:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Box",
     "OptionBoxRear": "Box R\u00fcckseite",
     "OptionDisc": "Disc",
+    "OptionIcon": "Icon",
     "OptionLogo": "Logo",
     "OptionMenu": "Men\u00fc",
     "OptionScreenshot": "Screenshot",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Download der Untertitel fehlgeschlagen f\u00fcr {0}",
     "LabelRunningTimeValue": "Laufzeit: {0}",
     "LabelIpAddressValue": "IP Adresse: {0}",
+    "UserLockedOutWithName": "Benutzer {0} wurde ausgeschlossen",
     "UserConfigurationUpdatedWithName": "Benutzereinstellungen wurden aktualisiert f\u00fcr {0}",
     "UserCreatedWithName": "Benutzer {0} wurde erstellt",
     "UserPasswordChangedWithName": "Das Passwort f\u00fcr Benutzer {0} wurde ge\u00e4ndert",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Aufgaben",
     "TabSyncJobs": "Synchronisations-Aufgaben",
     "LabelTagFilterMode": "Modus:",
-    "LabelTagFilterAllowModeHelp": "Wenn erlaubte Tags als Teil einer unter verzweigten Ordnerstruktur verwendet werden, m\u00fcssen \u00fcbergeordnete Verzeichnisse ebenso mit Tags versehen werden."
+    "LabelTagFilterAllowModeHelp": "Wenn erlaubte Tags als Teil einer unter verzweigten Ordnerstruktur verwendet werden, m\u00fcssen \u00fcbergeordnete Verzeichnisse ebenso mit Tags versehen werden.",
+    "HeaderThisUserIsCurrentlyDisabled": "Dieser Benutzer ist aktuell deaktiviert",
+    "MessageReenableUser": "F\u00fcr Reaktivierung schauen Sie unten"
 }
