--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "Si esta ejecutando el servidor desde la fuente, especifique la ruta de acceso a la carpeta dashboard-ui. Todos los archivos de cliente web ser\u00e1n atendidos desde esta ruta.",
     "ButtonConvertMedia": "Convertir Medios",
     "ButtonOrganize": "Organizar",
+    "LabelPinCode": "C\u00f3digo pin:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancelar",
+    "ButtonExit": "Salir",
     "ButtonNew": "Nuevo",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Rutas",
     "CategorySync": "Sinc.",
     "HeaderEasyPinCode": "C\u00f3digo Pin Sencillo",
+    "HeaderGrownupsOnly": "\u00a1Solo Adultos!",
+    "DividerOr": "--o--",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Para acceder, por favor introduzca su c\u00f3digo pin sencillo",
+    "KidsModeAdultInstruction": "Haga clic en el icono de candado en la esquina inferior derecha para configurar o abandonar el modo para ni\u00f1os.",
+    "ButtonConfigurePinCode": "Configurar c\u00f3digo pin",
+    "HeaderAdultsReadHere": "\u00a1Adultos Leer Esto!",
     "RegisterWithPayPal": "Registrar con PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sinc requiere de una Membres\u00eda de Aficionado",
     "HeaderEnjoyDayTrial": "Disfrute de una Prueba Gratuita por 14 D\u00edas",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Al habilitarlo, los archivos con extensiones .rar y .zip ser\u00e1n detectados como archivos de medios.",
     "LabelEnterConnectUserName": "Nombre de usuario o correo:",
     "LabelEnterConnectUserNameHelp": "Este es el nombre de usuario de su cuenta en l\u00ednea de Media Browser o su contrase\u00f1a.",
+    "LabelEnableEnhancedMovies": "Habilitar visualizaci\u00f3n mejorada de pel\u00edculas",
+    "LabelEnableEnhancedMoviesHelp": "Cuando se activa, la pel\u00edculas ser\u00e1n mostradas como carpetas para incluir trailers, extras, elenco y equipo, y otros contenidos relacionados.",
     "HeaderSyncJobInfo": "Trabajo de Sinc",
     "FolderTypeMixed": "Contenido mezclado",
     "FolderTypeMovies": "Pel\u00edculas",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Consultar la wiki de la biblioteca de medios.",
     "LabelCountry": "Pa\u00eds:",
     "LabelLanguage": "Idioma:",
+    "LabelTimeLimitHours": "L\u00edmite de Tiempo (horas):",
     "ButtonJoinTheDevelopmentTeam": "Unirse al Equipo de Desarrollo.",
     "HeaderPreferredMetadataLanguage": "Idioma preferido para metadatos:",
     "LabelSaveLocalMetadata": "Guardar im\u00e1genes y metadatos en las carpetas de medios",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Tareas Programadas",
     "TabMyPlugins": "Mis Complementos",
     "TabCatalog": "Cat\u00e1logo",
-    "PluginsTitle": "Complementos",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Actualizaciones Autom\u00e1ticas",
     "HeaderNowPlaying": "Reproduciendo Ahora",
     "HeaderLatestAlbums": "\u00c1lbums Recientes",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nuevo contenido agregado",
     "NotificationOptionNewLibraryContentMultiple": "Nuevo contenido agregado (varios)",
     "NotificationOptionCameraImageUploaded": "Imagen de la c\u00e1mara subida",
-    "SendNotificationHelp": "Por defecto, las notificaciones son enviadas a la bandeja de entrada del panel de control. Navegue el cat\u00e1logo de  complementos para instalar opciones de notificaci\u00f3n adicionales.",
+    "NotificationOptionUserLockedOut": "Usuario bloqueado",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Reinicio del servidor requerido",
     "LabelNotificationEnabled": "Habilitar esta notificaci\u00f3n",
     "LabelMonitorUsers": "Monitorear actividad desde:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Caja",
     "OptionBoxRear": "Reverso de caja",
     "OptionDisc": "Disco",
+    "OptionIcon": "Icono",
     "OptionLogo": "Logotipo",
     "OptionMenu": "Men\u00fa",
     "OptionScreenshot": "Captura de pantalla",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Fall\u00f3 la descarga de subt\u00edtulos para {0}",
     "LabelRunningTimeValue": "Duraci\u00f3n: {0}",
     "LabelIpAddressValue": "Direcci\u00f3n IP: {0}",
+    "UserLockedOutWithName": "El usuario {0} ha sido bloqueado",
     "UserConfigurationUpdatedWithName": "Se ha actualizado la configuraci\u00f3n del usuario {0}",
     "UserCreatedWithName": "Se ha creado el usuario {0}",
     "UserPasswordChangedWithName": "Se ha cambiado la contrase\u00f1a para el usuario {0}",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Trabajos",
     "TabSyncJobs": "Trabajos de Sinc",
     "LabelTagFilterMode": "Modo:",
-    "LabelTagFilterAllowModeHelp": "Si las etiquetas permitidas son usadas como parte de una estrucutra compleja de carpetas anidadas, el contenido etiquetado requerir\u00e1 que las carpetas padre sean etiquetadas tambi\u00e9n."
+    "LabelTagFilterAllowModeHelp": "Si las etiquetas permitidas son usadas como parte de una estrucutra compleja de carpetas anidadas, el contenido etiquetado requerir\u00e1 que las carpetas padre sean etiquetadas tambi\u00e9n.",
+    "HeaderThisUserIsCurrentlyDisabled": "Este usuario se encuentra actualmente deshabilitado",
+    "MessageReenableUser": "Vea abajo para volverlo a habilitar"
 }
