--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "Si vous ex\u00e9cutez le serveur \u00e0 partir des sources, veuillez sp\u00e9cifier le chemin du r\u00e9pertoire dashboard-ui. Tous les fichiers du client web seront servis \u00e0 partir de cet endroit.",
     "ButtonConvertMedia": "Convertir le m\u00e9dia",
     "ButtonOrganize": "Organiser",
+    "LabelPinCode": "Code PIN:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Annuler",
+    "ButtonExit": "Sortie",
     "ButtonNew": "Nouveau",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Chemins",
     "CategorySync": "Sync",
     "HeaderEasyPinCode": "Code Easy Pin",
+    "HeaderGrownupsOnly": "R\u00e9serv\u00e9 aux adultes !",
+    "DividerOr": "-- ou --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Veuillez entrez votre code Easy PIN :",
+    "KidsModeAdultInstruction": "Cliquez sur l'ic\u00f4ne en forme de cadenas en bas \u00e0 droite pour configurer ou quitter le mode Enfants. Votre code PIN sera requis.",
+    "ButtonConfigurePinCode": "Configurer le code PIN",
+    "HeaderAdultsReadHere": "Section r\u00e9serv\u00e9e aux adultes!",
     "RegisterWithPayPal": "S'enregistrer avec PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sync n\u00e9cessite un abonnement actif comme supporteur",
     "HeaderEnjoyDayTrial": "Profitez d'une p\u00e9riode d'essai de 14 jours",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Activez cette option pour reconna\u00eetre les fichiers portant l'extension .rar ou .zip comme des fichiers de m\u00e9dias. ",
     "LabelEnterConnectUserName": "Nom d'utilisateur ou adresse email :",
     "LabelEnterConnectUserNameHelp": "Ceci est le nom d'utilisateur ou mot de passe de votre compte en ligne Media Browser.",
+    "LabelEnableEnhancedMovies": "Activer le mode d'affichage \u00e9tendu des films",
+    "LabelEnableEnhancedMoviesHelp": "Lorsque ce mode est activ\u00e9, les films seront affich\u00e9s comme des dossiers et incluront les bandes-annonces, les extras, l'\u00e9quipe de tournage et les autre contenus li\u00e9s.",
     "HeaderSyncJobInfo": "T\u00e2che de synchronisation",
     "FolderTypeMixed": "Contenus m\u00e9lang\u00e9s",
     "FolderTypeMovies": "Films",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Se r\u00e9f\u00e9rer au wiki des biblioth\u00e8ques de m\u00e9dia",
     "LabelCountry": "Pays:",
     "LabelLanguage": "Langue:",
+    "LabelTimeLimitHours": "Limite de temps (heures) :",
     "ButtonJoinTheDevelopmentTeam": "Joignez-vous \u00e0 l'\u00e9quipe de d\u00e9veloppement",
     "HeaderPreferredMetadataLanguage": "Langue pr\u00e9f\u00e9r\u00e9e pour les m\u00e9tadonn\u00e9es:",
     "LabelSaveLocalMetadata": "Enregistrer les images et m\u00e9tadonn\u00e9es dans les r\u00e9pertoires de m\u00e9dia",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "T\u00e2ches planifi\u00e9es",
     "TabMyPlugins": "Mes plugins",
     "TabCatalog": "Catalogue",
-    "PluginsTitle": "Plugins",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Mises \u00e0 jour automatiques",
     "HeaderNowPlaying": "Lecture en cours",
     "HeaderLatestAlbums": "Derniers albums",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nouveau contenu ajout\u00e9",
     "NotificationOptionNewLibraryContentMultiple": "Nouveau contenu ajout\u00e9 (multiple)",
     "NotificationOptionCameraImageUploaded": "L'image de l'appareil photo a \u00e9t\u00e9 upload\u00e9e",
-    "SendNotificationHelp": "Par d\u00e9faut, les notifications sont d\u00e9livr\u00e9es dans la bo\u00eete de r\u00e9ception du tableau de bord. Consultez le catalogue de plugins pour installer des options de notifications suppl\u00e9mentaires.",
+    "NotificationOptionUserLockedOut": "Utilisateur verrouill\u00e9",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Un red\u00e9marrage du serveur est requis",
     "LabelNotificationEnabled": "Activer cette notification",
     "LabelMonitorUsers": "Surveiller les activit\u00e9s de:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Bo\u00eetier",
     "OptionBoxRear": "Dos de bo\u00eetier",
     "OptionDisc": "Disque",
+    "OptionIcon": "Ic\u00f4ne",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Screenshot",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Le t\u00e9l\u00e9chargement des sous-titres pour {0} a \u00e9chou\u00e9.",
     "LabelRunningTimeValue": "Dur\u00e9e: {0}",
     "LabelIpAddressValue": "Adresse IP: {0}",
+    "UserLockedOutWithName": "L'utilisateur {0} a \u00e9t\u00e9 verrouill\u00e9",
     "UserConfigurationUpdatedWithName": "La configuration utilisateur de {0} a \u00e9t\u00e9 mise \u00e0 jour",
     "UserCreatedWithName": "L'utilisateur {0} a \u00e9t\u00e9 cr\u00e9\u00e9.",
     "UserPasswordChangedWithName": "Le mot de passe pour l'utilisateur {0} a \u00e9t\u00e9 modifi\u00e9.",
@@ -1353,5 +1370,7 @@
     "TabJobs": "T\u00e2ches",
     "TabSyncJobs": "T\u00e2ches de synchronisation",
     "LabelTagFilterMode": "Mode :",
-    "LabelTagFilterAllowModeHelp": "Si l'autorisation par tags est appliqu\u00e9e \u00e0 un contenu d'un sous-r\u00e9pertoire, les r\u00e9pertoires parents devront \u00e9galement \u00eatre marqu\u00e9s avec ces m\u00eames tags."
+    "LabelTagFilterAllowModeHelp": "Si l'autorisation par tags est appliqu\u00e9e \u00e0 un contenu d'un sous-r\u00e9pertoire, les r\u00e9pertoires parents devront \u00e9galement \u00eatre marqu\u00e9s avec ces m\u00eames tags.",
+    "HeaderThisUserIsCurrentlyDisabled": "Cet utilisateur est actuellement d\u00e9sactiv\u00e9",
+    "MessageReenableUser": "Voir ci-dessous pour le r\u00e9activer"
 }
