--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "se si sta eseguendo il server da una sorgente, specifica il percorso dell'interfaccia. Tutti i file per i client saranno presi da questo percorso",
     "ButtonConvertMedia": "Converti media",
     "ButtonOrganize": "Organizza",
+    "LabelPinCode": "Pin code:",
     "ButtonOk": "OK",
     "ButtonCancel": "Annulla",
+    "ButtonExit": "Exit",
     "ButtonNew": "Nuovo",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Percorsi",
     "CategorySync": "Sinc.zza",
     "HeaderEasyPinCode": "Codice pin",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "Registra con PayPal",
     "HeaderSyncRequiresSupporterMembership": "La sincronizzazione richiede un'iscrizione come supporter",
     "HeaderEnjoyDayTrial": "Goditi la tua prova gratuita di 14 giorni",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "se attivato, i file con estensione .rar e .zip saranno considerati come file multimediali.",
     "LabelEnterConnectUserName": "Nome Utente o email:",
     "LabelEnterConnectUserNameHelp": "Questo \u00e8 il tuo nome utente, o password, per il tuo account online di Media Browser.",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Attiv. di Sinc.",
     "FolderTypeMixed": "contenuto misto",
     "FolderTypeMovies": "Film",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Fare riferimento alla wiki libreria multimediale.",
     "LabelCountry": "Nazione:",
     "LabelLanguage": "Lingua:",
+    "LabelTimeLimitHours": "Time limit (hours):",
     "ButtonJoinTheDevelopmentTeam": "Unisciti al Team di Sviluppo",
     "HeaderPreferredMetadataLanguage": "Lingua dei metadati preferita:",
     "LabelSaveLocalMetadata": "Salva immagini e metadati nelle cartelle multimediali",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Operazioni Pianificate",
     "TabMyPlugins": "Plugins Installati",
     "TabCatalog": "Catalogo",
-    "PluginsTitle": "Plugins",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Aggiornamenti Automatici",
     "HeaderNowPlaying": "In Riproduzione",
     "HeaderLatestAlbums": "Ultimi Album",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nuovo contenuto aggiunto",
     "NotificationOptionNewLibraryContentMultiple": "Nuovi contenuti aggiunti",
     "NotificationOptionCameraImageUploaded": "Immagine fotocamera caricata",
-    "SendNotificationHelp": "Per impostazione predefinita, le notifiche vengono inviate alla casella della pagina principale. Sfoglia il catalogo plugin da installare opzioni di notifica aggiuntive.",
+    "NotificationOptionUserLockedOut": "User locked out",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Riavvio del server necessario",
     "LabelNotificationEnabled": "Abilita questa notifica",
     "LabelMonitorUsers": "Monitorare l'attivit\u00e0 da:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Box",
     "OptionBoxRear": "Box rear",
     "OptionDisc": "Disco",
+    "OptionIcon": "Icon",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Immagine",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Sottotitoli non scaricati per {0}",
     "LabelRunningTimeValue": "Durata: {0}",
     "LabelIpAddressValue": "Indirizzo IP: {0}",
+    "UserLockedOutWithName": "User {0} has been locked out",
     "UserConfigurationUpdatedWithName": "Configurazione utente \u00e8 stata aggiornata per {0}",
     "UserCreatedWithName": "Utente {0} \u00e8 stato creato",
     "UserPasswordChangedWithName": "Password utente cambiata per {0}",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Attivit\u00e0",
     "TabSyncJobs": "Attiv. di Sinc.",
     "LabelTagFilterMode": "Modalit\u00e0:",
-    "LabelTagFilterAllowModeHelp": "Se i tag permessi vengono utilizzati come parte di una struttura di cartelle profondamente nidificate, il contenuto che viene etichettato richieder\u00e0 cartelle principali di essere etichettato come bene."
+    "LabelTagFilterAllowModeHelp": "Se i tag permessi vengono utilizzati come parte di una struttura di cartelle profondamente nidificate, il contenuto che viene etichettato richieder\u00e0 cartelle principali di essere etichettato come bene.",
+    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
+    "MessageReenableUser": "See below to reenable"
 }
