--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -29,9 +29,9 @@
     "WindowsServiceIntro2": "Hvis du bruker Windows, v\u00e6r oppmerksom p\u00e5 at det ikke kan kj\u00f8res samtidig som ikonet, slik at du trenger \u00e5 g\u00e5 ut av \"trayen\" for \u00e5 kj\u00f8re tjenesten. Tjenesten m\u00e5 ogs\u00e5 konfigureres med administratorrettigheter via kontrollpanelet. V\u00e6r oppmerksom p\u00e5 at p\u00e5 denne tiden tjenesten ikke er i stand til selv-oppdatering, s\u00e5 nye versjoner vil kreve manuell interaksjon.",
     "WizardCompleted": "Det er alt vi trenger n\u00e5. Media Browser har begynt \u00e5 samle inn informasjon om ditt mediabibliotek. Sjekk ut noen av v\u00e5re apps, og klikk s\u00e5 <b>Ferdig<\/b> for \u00e5 vise <b>Server Dashboard<\/b>.",
     "LabelConfigureSettings": "Konfigurer innstillinger",
-    "LabelEnableVideoImageExtraction": "Aktiver utvinning av videobildet",
+    "LabelEnableVideoImageExtraction": "Aktiv\u00e9r uthenting av stillbilder fra video",
     "VideoImageExtractionHelp": "For videoer som ikke allerede har bilder, og som vi ikke klarer \u00e5 finne internettbilder for. Dette gj\u00f8r at det f\u00f8rste biblioteks\u00f8ket tar noe lenger tid, men vil resultere i en mer tiltalende presentasjon.",
-    "LabelEnableChapterImageExtractionForMovies": "Pakk ut kapittelbilde utvinning for Filmer",
+    "LabelEnableChapterImageExtractionForMovies": "Generer kapittelbilde for Filmer",
     "LabelChapterImageExtractionForMoviesHelp": "Uthenting av kapittelbilder gj\u00f8r klientene i stand til \u00e5 vise grafiske menyer for valg av scene. Prosessen kan v\u00e6re treg, CPU-intensiv og kan kreve sv\u00e6rt mange gigabytes lagringsplass. Dette kj\u00f8res som en nattlig oppgave, og kan konfigureres under Planlagte Aktiviteter. Det anbefales ikke \u00e5 kj\u00f8re denne jobben n\u00e5r serveren brukes til annet.",
     "LabelEnableAutomaticPortMapping": "Sl\u00e5 p\u00e5 automatisk port-mapping",
     "LabelEnableAutomaticPortMappingHelp": "UPnP tillater automatisert router-konfigurasjon for enkel ekstern tilgang. Denne funksjonen st\u00f8ttes ikke av alle routere.",
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "Hvis serveren kj\u00f8rer fra kildekode, angi sti til mappe for dashboard-ui. Alle filer for webklienten kommer fra denne mappen.",
     "ButtonConvertMedia": "Konverter media",
     "ButtonOrganize": "Organiser",
+    "LabelPinCode": "Pin code:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Avbryt",
+    "ButtonExit": "Exit",
     "ButtonNew": "Ny",
     "HeaderTV": "TV",
     "HeaderAudio": "Lyd",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Stier",
     "CategorySync": "Synk",
     "HeaderEasyPinCode": "Enkel PIN-kode",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "Registrer med PayPal",
     "HeaderSyncRequiresSupporterMembership": "Synkronisering krever st\u00f8ttemedlemskap",
     "HeaderEnjoyDayTrial": "Hygg deg med en 14-dagers gratis pr\u00f8veperiode",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Hvis aktivert blir .rar- og .zipfiler behandlet som mediafiler.",
     "LabelEnterConnectUserName": "Brukernavn eller epost:",
     "LabelEnterConnectUserNameHelp": "Dette er din Media Browser online brukernavn eller passord.",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Synk.jobb",
     "FolderTypeMixed": "Forskjellig innhold",
     "FolderTypeMovies": "Filmer",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Se i wik for media-biblioteket.",
     "LabelCountry": "Land:",
     "LabelLanguage": "Spr\u00e5k:",
+    "LabelTimeLimitHours": "Time limit (hours):",
     "ButtonJoinTheDevelopmentTeam": "Bli med i utvikler-teamet",
     "HeaderPreferredMetadataLanguage": "Foretrukket spr\u00e5k for metadata",
     "LabelSaveLocalMetadata": "Lagre cover og metadata i medie-mappene",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Planlagte Oppgaver",
     "TabMyPlugins": "Mine programtillegg",
     "TabCatalog": "Katalog",
-    "PluginsTitle": "Programtillegg",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Automatiske oppdateringer",
     "HeaderNowPlaying": "Spiller n\u00e5",
     "HeaderLatestAlbums": "Siste album",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nytt innhold er lagt til",
     "NotificationOptionNewLibraryContentMultiple": "Nytt innhold lagt til (flere)",
     "NotificationOptionCameraImageUploaded": "Bilde fra kamera lastet opp",
-    "SendNotificationHelp": "Som standard blir varslinger sent til dashbordets innboks. Bla igjennom katalog med programtillegg for \u00e5 installere valgfrie varslings-alternativer.",
+    "NotificationOptionUserLockedOut": "User locked out",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Server m\u00e5 startes p\u00e5 nytt",
     "LabelNotificationEnabled": "Sl\u00e5 p\u00e5 denne varslingen",
     "LabelMonitorUsers": "Monitorer aktivitet fra:",
@@ -982,23 +997,23 @@
     "LabelLogs": "Logger:",
     "LabelMetadata": "Metadata:",
     "LabelImagesByName": "Bilder etter navn:",
-    "LabelTranscodingTemporaryFiles": "Transcoding midlertidige filer:",
+    "LabelTranscodingTemporaryFiles": "Transcoder midlertidige filer:",
     "HeaderLatestMusic": "Siste Musikk",
     "HeaderBranding": "Merke",
     "HeaderApiKeys": "Api N\u00f8kkler",
     "HeaderApiKeysHelp": "Eksterne programmer er p\u00e5lagt \u00e5 ha en API-n\u00f8kkel for \u00e5 kunne kommunisere med Media Browser. N\u00f8kkel f\u00e5es ved \u00e5 logge p\u00e5 med en Media Browser-konto, eller ved \u00e5 manuelt innvilge s\u00f8knaden en n\u00f8kkel.",
-    "HeaderApiKey": "Api N\u00f8kkel",
+    "HeaderApiKey": "API-n\u00f8kkel",
     "HeaderApp": "App",
     "HeaderDevice": "Enhet",
     "HeaderUser": "Bruker",
     "HeaderDateIssued": "Dato utstedt",
     "LabelChapterName": "Kapittel {0}",
     "HeaderNewApiKey": "Ny Api N\u00f8kkel",
-    "LabelAppName": "Applikasjon navn",
-    "LabelAppNameExample": "Eksempel: Sickbread, NzbDrone",
+    "LabelAppName": "Applikasjonsnavn",
+    "LabelAppNameExample": "Eksempel: Sickbeard, NzbDrone",
     "HeaderNewApiKeyHelp": "Innvilge en applikasjon tillatelser for \u00e5 kommunisere med Media Browser.",
     "HeaderHttpHeaders": "Http Headere",
-    "HeaderIdentificationHeader": "Identifiserings Header",
+    "HeaderIdentificationHeader": "Identifiseringsheader",
     "LabelValue": "Verdi:",
     "LabelMatchType": "Match type:",
     "OptionEquals": "Lik",
@@ -1013,7 +1028,7 @@
     "LabelView": "Se:",
     "TabUsers": "Brukere",
     "LabelSortName": "Sorterings navn:",
-    "LabelDateAdded": "Dato lagt til",
+    "LabelDateAdded": "Dato lagt til:",
     "HeaderFeatures": "Funksjoner",
     "HeaderAdvanced": "Avansert",
     "ButtonSync": "Synk",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Boks",
     "OptionBoxRear": "Boks bak",
     "OptionDisc": "Disk",
+    "OptionIcon": "Icon",
     "OptionLogo": "Logo",
     "OptionMenu": "Meny",
     "OptionScreenshot": "Screenshot",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "nedlasting av undertekster feilet for {0}",
     "LabelRunningTimeValue": "Spille tide: {0}",
     "LabelIpAddressValue": "Ip adresse: {0}",
+    "UserLockedOutWithName": "User {0} has been locked out",
     "UserConfigurationUpdatedWithName": "Bruker konfigurasjon har blitt oppdatert for {0}",
     "UserCreatedWithName": "Bruker {0} har blitt opprettet",
     "UserPasswordChangedWithName": "Passord har blitt endret for bruker {0}",
@@ -1101,7 +1118,7 @@
     "MessageApplicationUpdated": "Media Browser Server har blitt oppdatert",
     "AuthenticationSucceededWithUserName": "{0} autentisert med suksess",
     "FailedLoginAttemptWithUserName": "P\u00e5loggingsfors\u00f8k feilet fra {0}",
-    "UserDownloadingItemWithValues": "{0} is downloading {1}",
+    "UserDownloadingItemWithValues": "{0} laster ned {1}",
     "UserStartedPlayingItemWithValues": "{0} har startet avspilling av {1}",
     "UserStoppedPlayingItemWithValues": "{0} har stoppet avspilling av {1}",
     "AppDeviceValues": "App: {0} , Device: {1}",
@@ -1118,14 +1135,14 @@
     "LabelDisplayFoldersView": "Vis alle mapper som rene lagringsmapper",
     "ViewTypeLiveTvRecordingGroups": "Opptak",
     "ViewTypeLiveTvChannels": "Kanaler",
-    "LabelEasyPinCode": "Easy pin code:",
-    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
-    "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "LabelEasyPinCode": "Enkel PIN-kode:",
+    "EasyPasswordHelp": "Din enkle PIN-kode brukes for offline tilgang gjennom st\u00f8ttede Media Browser apps, og kan ogs\u00e5 brukes for enkel innlogging over nettverket.",
+    "LabelInNetworkSignInWithEasyPassword": "Tillat innlogging med PIN-kode via det lokale nettverket.",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "Hvis denne aktiveres kan man bruke PIN-koden til \u00e5 logge inn i Media Browser apps via hjemmenettverket. Man trenger fremdeles det vanlige passordet for \u00e5 logge inn over internett. Hvis man ikke har valgt PIN-kode, vil man ikke trenge passord innen hjemmenettverket.",
     "HeaderPassword": "Passord",
     "HeaderLocalAccess": "Lokal Tilkobling",
     "HeaderViewOrder": "Visnings rekkef\u00f8lge",
-    "ButtonResetEasyPassword": "Reset easy pin code",
+    "ButtonResetEasyPassword": "Tilbakestill PIN-kode",
     "LabelSelectUserViewOrder": "Velg rekkef\u00f8lge dine visninger vil bli vist inn i Media Browser apps",
     "LabelMetadataRefreshMode": "Metadata oppfrisknings modus:",
     "LabelImageRefreshMode": "Bilde oppfrisknings modus:",
@@ -1178,7 +1195,7 @@
     "LabelAirsAfterSeason": "Sendt etter sesong:",
     "LabelAirsBeforeEpisode": "Sendt f\u00f8r episode:",
     "LabelTreatImageAs": "Behandle bilde som:",
-    "LabelDisplayOrder": "Visnings rekkef\u00f8lge:",
+    "LabelDisplayOrder": "Visningsrekkef\u00f8lge:",
     "LabelDisplaySpecialsWithinSeasons": "Vis speialiteter innfor sensongen de ble sendt i",
     "HeaderCountries": "Land",
     "HeaderGenres": "Sjanger",
@@ -1188,7 +1205,7 @@
     "HeaderMetadataSettings": "Metadata innstilinger",
     "LabelLockItemToPreventChanges": "L\u00e5s dette elementet for \u00e5 hindre fremtidige endringer",
     "MessageLeaveEmptyToInherit": "La v\u00e6re blank for \u00e5 arve innstillinger fra et foreldre element, eller den globale standard verdien.",
-    "TabDonate": "Doner",
+    "TabDonate": "Don\u00e9r",
     "HeaderDonationType": "Donasjon type:",
     "OptionMakeOneTimeDonation": "Gi en egen donasjon",
     "OptionOneTimeDescription": "Dette er en ekstra donasjon til teamet for \u00e5 vise din st\u00f8tte. Det har ikke noen ekstra fordeler, og vil ikke produsere en supporter tasten.",
@@ -1199,7 +1216,7 @@
     "OptionNoThemeSong": "Ingen temasang",
     "OptionNoThemeVideo": "Ingen tema video",
     "LabelOneTimeDonationAmount": "Donasjons bel\u00f8p:",
-    "ButtonDonate": "Donate",
+    "ButtonDonate": "Don\u00e9r",
     "OptionActor": "Skuespiller",
     "OptionComposer": "Komponist",
     "OptionDirector": "Regiss\u00f8r",
@@ -1278,26 +1295,26 @@
     "TitleDevices": "Enheter",
     "TabCameraUpload": "Kameraopplasting",
     "TabDevices": "Enheter",
-    "HeaderCameraUploadHelp": "Automatically upload photos and videos taken from your mobile devices into Media Browser.",
+    "HeaderCameraUploadHelp": "Last opp bilder og videoer tatt med mobiltelefonen din automatisk.",
     "MessageNoDevicesSupportCameraUpload": "Du har for \u00f8yeblikket ingen enheter som st\u00f8tter kameraopplasting.",
     "LabelCameraUploadPath": "Sti til kameraopplasting:",
-    "LabelCameraUploadPathHelp": "Select a custom upload path, if desired. If unspecified a default folder will be used. If using a custom path it will also need to be added in the library setup area.",
+    "LabelCameraUploadPathHelp": "Velg en tilpasset sti for opplasting dersom du \u00f8nsker det. Hvis intet er spesifiser vil standardmappen brukes. Hvis du bruker en tilpasset sti vil denne ogs\u00e5 m\u00e5tte legges til i innstillingene for bibliotek.",
     "LabelCreateCameraUploadSubfolder": "Lag en underkatalog for hver enhet",
-    "LabelCreateCameraUploadSubfolderHelp": "Specific folders can be assigned to a device by clicking on it from the Devices page.",
+    "LabelCreateCameraUploadSubfolderHelp": "Spesifikke mapper kan tildeles en enhet ved \u00e5 klikke p\u00e5 den fra Enhets-siden.",
     "LabelCustomDeviceDisplayName": "Visningsnavn:",
     "LabelCustomDeviceDisplayNameHelp": "Oppgi et egendefinert visningsnavn eller la det v\u00e6re tomt for \u00e5 bruke navnet som enheten rapporterer.",
     "HeaderInviteUser": "Invit\u00e9r Bruker",
     "LabelConnectGuestUserNameHelp": "Dette er brukernavnet som vennen din bruker for \u00e5 logge inn p\u00e5 Media Browser nettstedet, eller epostadressen deres.",
     "HeaderInviteUserHelp": "\u00c5 dele mediefiler med venner er enklere enn noen gang f\u00f8r med Media Browser Connect.",
     "ButtonSendInvitation": "Send Invitasjon",
-    "HeaderSignInWithConnect": "Sign in with Media Browser Connect",
+    "HeaderSignInWithConnect": "Logg inn med Media Browser Connect",
     "HeaderGuests": "Gjester",
     "HeaderLocalUsers": "Lokale Brukere",
     "HeaderPendingInvitations": "Ventende invitasjoner",
     "TabParentalControl": "Foreldrekontroll",
     "HeaderAccessSchedule": "Access Schedule",
     "HeaderAccessScheduleHelp": "Create an access schedule to limit access to certain hours.",
-    "ButtonAddSchedule": "Add Schedule",
+    "ButtonAddSchedule": "Legg til timeplan",
     "LabelAccessDay": "Ukedag:",
     "LabelAccessStart": "Starttid:",
     "LabelAccessEnd": "Sluttid:",
@@ -1306,7 +1323,7 @@
     "OptionWeekdays": "Ukedager",
     "OptionWeekends": "Helger",
     "MessageProfileInfoSynced": "Brukerprofilinformasjon er synkronisert med Media Browser Connect.",
-    "HeaderOptionalLinkMediaBrowserAccount": "Optional: Link your Media Browser account",
+    "HeaderOptionalLinkMediaBrowserAccount": "Valgfritt: Link til din konto p\u00e5 Media Browser",
     "ButtonTrailerReel": "Trailer reel",
     "HeaderTrailerReel": "Trailer Reel",
     "OptionPlayUnwatchedTrailersOnly": "Play only unwatched trailers",
@@ -1314,7 +1331,7 @@
     "MessageNoTrailersFound": "No trailers found. Install the Trailer channel to enhance your movie experience by adding a library of internet trailers.",
     "HeaderNewUsers": "Nye Brukere",
     "ButtonSignUp": "Registrering",
-    "ButtonForgotPassword": "Forgot password",
+    "ButtonForgotPassword": "Glemt passord",
     "OptionDisableUserPreferences": "Deaktiver tillgang til bruker preferanser",
     "OptionDisableUserPreferencesHelp": "Hvis ativert, vil kun administratorer kunne konfigurere bruker profil bilder, passord og spr\u00e5k preferanser.",
     "HeaderSelectServer": "Velg Server",
@@ -1329,7 +1346,7 @@
     "HeaderShareMediaFolders": "Del media mapper",
     "MessageGuestSharingPermissionsHelp": "De fleste funksjonene er i utgangspunktet utilgjengelig for gjester, men kan aktiveres ved behov.",
     "HeaderInvitations": "Invitasjoner",
-    "LabelForgotPasswordUsernameHelp": "Enter your username, if you remember it.",
+    "LabelForgotPasswordUsernameHelp": "Skriv inn ditt brukernavn, hvis du husker det.",
     "HeaderForgotPassword": "Glemt passord",
     "TitleForgotPassword": "Glemt passord",
     "TitlePasswordReset": "Resett passord",
@@ -1351,7 +1368,9 @@
     "NameSeasonNumber": "Sesong {0}",
     "LabelNewUserNameHelp": "Brukernavn kan inneholder internasjonale bokstaver (a-z), tall (0-9), bindestrek (-), understrek (_), apostrof (') og punktum (.)",
     "TabJobs": "Jobber",
-    "TabSyncJobs": "Sync Jobs",
-    "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "TabSyncJobs": "Synk-jobber",
+    "LabelTagFilterMode": "Modus",
+    "LabelTagFilterAllowModeHelp": "Hvis tillatte tagger brukes som del av mappestrukturen, vil innhold som er tagget kreve at foreldre-mappene ogs\u00e5 er tagget.",
+    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
+    "MessageReenableUser": "See below to reenable"
 }
