--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "Wanneer u de server draait vanaf de bron, geeft u het pad naar de map dashboard-ui op. Alle web client bestanden worden geladen vanaf deze locatie.",
     "ButtonConvertMedia": "Converteer media",
     "ButtonOrganize": "Organiseren",
+    "LabelPinCode": "Pincode:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Annuleren",
+    "ButtonExit": "Afsluiten",
     "ButtonNew": "Nieuw",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Paden",
     "CategorySync": "Sync",
     "HeaderEasyPinCode": "Eenvoudige Pincode",
+    "HeaderGrownupsOnly": "Alleen voor volwassenen!",
+    "DividerOr": "-- of --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Voor toegang toets uw pincode",
+    "KidsModeAdultInstruction": "Klik op het slotje in de rechterbenedenhoek om te configureren of blijf in de kindermodus. Uw pincode nodig zal zijn",
+    "ButtonConfigurePinCode": "Configureer pincode",
+    "HeaderAdultsReadHere": "Volwassenen Lees hier!",
     "RegisterWithPayPal": "Registreer met PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sync Vereist een Supporter lidmaatschap",
     "HeaderEnjoyDayTrial": "Geniet van een 14-daagse gratis proefversie",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Indien ingeschakeld zullen bestanden met .rar en .zip extensies herkend worden als media bestanden.",
     "LabelEnterConnectUserName": "Gebruikersnaam of e-mail:",
     "LabelEnterConnectUserNameHelp": "Dit is uw Media Browser online account gebruikersnaam of wachtwoord.",
+    "LabelEnableEnhancedMovies": "Verbeterde film displays inschakelen",
+    "LabelEnableEnhancedMoviesHelp": "Wanneer ingeschakeld, zullen films worden weergegeven als mappen inclusief trailers, extra's, cast & crew en andere gerelateerde inhoud.",
     "HeaderSyncJobInfo": "Sync Opdrachten",
     "FolderTypeMixed": "Gemengde inhoud",
     "FolderTypeMovies": "Films",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Raadpleeg de mediabibliotheek wiki.",
     "LabelCountry": "Land:",
     "LabelLanguage": "Taal:",
+    "LabelTimeLimitHours": "Tijdslimiet (uren):",
     "ButtonJoinTheDevelopmentTeam": "Word lid van het Ontwikkel Team",
     "HeaderPreferredMetadataLanguage": "Gewenste metadata taal:",
     "LabelSaveLocalMetadata": "Sla afbeeldingen en metadata op in de mediamappen",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Geplande taken",
     "TabMyPlugins": "Mijn Plug-ins",
     "TabCatalog": "Catalogus",
-    "PluginsTitle": "Plug-ins",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Automatische updates",
     "HeaderNowPlaying": "Wordt nu afgespeeld",
     "HeaderLatestAlbums": "Nieuwste Albums",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nieuwe content toegevoegd",
     "NotificationOptionNewLibraryContentMultiple": "Nieuwe content toegevoegd (meerdere)",
     "NotificationOptionCameraImageUploaded": "Camera afbeelding ge\u00fcpload",
-    "SendNotificationHelp": "Meldingen worden geplaatst in de inbox op het dashboard. Blader door de Plug-in catalogus om aanvullende opties voor meldingen te installeren.",
+    "NotificationOptionUserLockedOut": "Gebruiker uitgesloten",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Server herstart nodig",
     "LabelNotificationEnabled": "Deze melding inschakelen",
     "LabelMonitorUsers": "Monitor activiteit van:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Hoes",
     "OptionBoxRear": "Achterkant hoes",
     "OptionDisc": "Schijf",
+    "OptionIcon": "Pictogram",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Schermafbeelding",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Downloaden van ondertiteling voor {0} is mislukt",
     "LabelRunningTimeValue": "Looptijd: {0}",
     "LabelIpAddressValue": "IP adres: {0}",
+    "UserLockedOutWithName": "Gebruiker {0} is uitgesloten",
     "UserConfigurationUpdatedWithName": "Gebruikersinstellingen voor {0} zijn bijgewerkt",
     "UserCreatedWithName": "Gebruiker {0} is aangemaakt",
     "UserPasswordChangedWithName": "Wachtwoord voor {0} is gewijzigd",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Opdrachten",
     "TabSyncJobs": "Sync Opdrachten",
     "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "Als toegestane tags worden gebruikt in een diep geneste mappenstructuur, zal getagde inhoud vereisen dat de bovenliggende mappen ook getagd zijn."
+    "LabelTagFilterAllowModeHelp": "Als toegestane tags worden gebruikt in een diep geneste mappenstructuur, zal getagde inhoud vereisen dat de bovenliggende mappen ook getagd zijn.",
+    "HeaderThisUserIsCurrentlyDisabled": "Deze gebruiker is momenteel uitgesloten",
+    "MessageReenableUser": "Zie hieronder hoe opnieuw in te schakelen"
 }
