--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "Se executar o servidor a partir do c\u00f3digo, especifique o caminho para a pasta da interface do painel. Todos os arquivos do cliente web ser\u00e3o usados nesta localiza\u00e7\u00e3o.",
     "ButtonConvertMedia": "Converter m\u00eddia",
     "ButtonOrganize": "Organizar",
+    "LabelPinCode": "C\u00f3digo Pin:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancelar",
+    "ButtonExit": "Sair",
     "ButtonNew": "Novo",
     "HeaderTV": "TV",
     "HeaderAudio": "\u00c1udio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Caminhos",
     "CategorySync": "Sincroniza\u00e7\u00e3o",
     "HeaderEasyPinCode": "C\u00f3digo de Pin Facil",
+    "HeaderGrownupsOnly": "Adultos Apenas!",
+    "DividerOr": "-- ou --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Para acessar, por favor digite seu c\u00f3digo pin f\u00e1cil",
+    "KidsModeAdultInstruction": "Clique no \u00edcone de bloqueio no canto inferior direito para configurar ou deixar o modo infantil. Seu c\u00f3digo pin ser\u00e1 necess\u00e1rio.",
+    "ButtonConfigurePinCode": "Configurar c\u00f3digo pin",
+    "HeaderAdultsReadHere": "Adultos Leiam Aqui!",
     "RegisterWithPayPal": "Registrar com PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sincroniza\u00e7\u00e3o Necessita de uma Filia\u00e7\u00e3o de Colaborador",
     "HeaderEnjoyDayTrial": "Aproveite um per\u00edodo de 14 dias gr\u00e1tis para testes",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Se ativado, arquivos com extens\u00f5es .rar e .zip ser\u00e3o detectados como arquivos de m\u00eddia.",
     "LabelEnterConnectUserName": "Nome de usu\u00e1rio ou email:",
     "LabelEnterConnectUserNameHelp": "Este \u00e9 o nome de usu\u00e1rio ou senha de sua conta online do Media Browser.",
+    "LabelEnableEnhancedMovies": "Ativar exibi\u00e7\u00f5es de filme avan\u00e7adas",
+    "LabelEnableEnhancedMoviesHelp": "Quando ativado, os filmes ser\u00e3o exibidos como pastas para incluir trailers, extras, elenco & equipe e outros conte\u00fados relacionados.",
     "HeaderSyncJobInfo": "Tarefa de Sincroniza\u00e7\u00e3o",
     "FolderTypeMixed": "Conte\u00fado misto",
     "FolderTypeMovies": "Filmes",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Consultar wiki da biblioteca de m\u00eddias",
     "LabelCountry": "Pa\u00eds:",
     "LabelLanguage": "Idioma:",
+    "LabelTimeLimitHours": "Limite de tempo (horas):",
     "ButtonJoinTheDevelopmentTeam": "Junte-se ao Time de Desenvolvimento",
     "HeaderPreferredMetadataLanguage": "Idioma preferido dos metadados:",
     "LabelSaveLocalMetadata": "Salvar artwork e metadados dentro das pastas da m\u00eddia",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Tarefas Agendadas",
     "TabMyPlugins": "Meus Plugins",
     "TabCatalog": "Cat\u00e1logo",
-    "PluginsTitle": "Plugins",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Atualiza\u00e7\u00f5es Autom\u00e1ticas",
     "HeaderNowPlaying": "Reproduzindo Agora",
     "HeaderLatestAlbums": "\u00c1lbuns Recentes",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Novo conte\u00fado adicionado",
     "NotificationOptionNewLibraryContentMultiple": "Novo conte\u00fado adicionado (m\u00faltiplo)",
     "NotificationOptionCameraImageUploaded": "Imagem da c\u00e2mera carregada",
-    "SendNotificationHelp": "Por padr\u00e3o, notifica\u00e7\u00f5es s\u00e3o entregues \u00e0 caixa de entrada do painel.  Explore o cat\u00e1logo de plugins para instalar op\u00e7\u00f5es adicionais de notifica\u00e7\u00f5es.",
+    "NotificationOptionUserLockedOut": "Usu\u00e1rio bloqueado",
+    "HeaderSendNotificationHelp": "Por padr\u00e3o, as notifica\u00e7\u00f5es s\u00e3o mostradas na caixa de entrada do painel. Explore o cat\u00e1logo dos plugins para instalar op\u00e7\u00f5es de notifica\u00e7\u00e3o adicionais.",
     "NotificationOptionServerRestartRequired": "Necessidade de reiniciar servidor",
     "LabelNotificationEnabled": "Ativar esta notifica\u00e7\u00e3o",
     "LabelMonitorUsers": "Monitorar atividade de:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Caixa",
     "OptionBoxRear": "Traseira da Caixa",
     "OptionDisc": "Disco",
+    "OptionIcon": "\u00cdcone",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Imagem da tela",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Falha ao baixar legendas para {0}",
     "LabelRunningTimeValue": "Dura\u00e7\u00e3o: {0}",
     "LabelIpAddressValue": "Endere\u00e7o Ip: {0}",
+    "UserLockedOutWithName": "Usu\u00e1rio {0} foi bloqueado",
     "UserConfigurationUpdatedWithName": "A configura\u00e7\u00e3o do usu\u00e1rio {0} foi atualizada",
     "UserCreatedWithName": "O usu\u00e1rio {0} foi criado",
     "UserPasswordChangedWithName": "A senha do usu\u00e1rio {0} foi alterada",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Tarefas",
     "TabSyncJobs": "Tarefas de Sincroniza\u00e7\u00e3o",
     "LabelTagFilterMode": "Modo:",
-    "LabelTagFilterAllowModeHelp": "Se permitidas, as tags ser\u00e3o usadas como parte de uma estrutura de pastas agrupadas. Conte\u00fado com tags necessitar\u00e1 que as pastas superiores tamb\u00e9m tenham tags."
+    "LabelTagFilterAllowModeHelp": "Se permitidas, as tags ser\u00e3o usadas como parte de uma estrutura de pastas agrupadas. Conte\u00fado com tags necessitar\u00e1 que as pastas superiores tamb\u00e9m tenham tags.",
+    "HeaderThisUserIsCurrentlyDisabled": "Este usu\u00e1rio est\u00e1 desativado atualmente",
+    "MessageReenableUser": "Veja abaixo para reativar"
 }
