--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
@@ -44,12 +44,14 @@
     "OptionEnableWebClientResponseCache": "Enable web client response caching",
     "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
     "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
-    "LabelDashboardSourcePath": "Web client source path:",
-    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
+    "LabelDashboardSourcePath": "Caminho da fonte do cliente web:",
+    "LabelDashboardSourcePathHelp": "Se correr o servidor a partir do c\u00f3digo fonte, especifique o caminho da pasta dashboard-ui. Todos os ficheiros do cliente web ser\u00e3o usados a partir desta localiza\u00e7\u00e3o.",
     "ButtonConvertMedia": "Convert media",
     "ButtonOrganize": "Organize",
+    "LabelPinCode": "Pin code:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancelar",
+    "ButtonExit": "Exit",
     "ButtonNew": "Novo",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Paths",
     "CategorySync": "Sync",
     "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "Register with PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
     "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "If enabled, files with .rar and .zip extensions will be detected as media files.",
     "LabelEnterConnectUserName": "User name or email:",
     "LabelEnterConnectUserNameHelp": "This is your Media Browser online account user name or password.",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Sync Job",
     "FolderTypeMixed": "Mixed content",
     "FolderTypeMovies": "Movies",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Consulte a wiki",
     "LabelCountry": "Pa\u00eds:",
     "LabelLanguage": "Idioma:",
+    "LabelTimeLimitHours": "Time limit (hours):",
     "ButtonJoinTheDevelopmentTeam": "Join the Development Team",
     "HeaderPreferredMetadataLanguage": "Idioma preferido para metadados",
     "LabelSaveLocalMetadata": "Guardar imagens e metadados nas pastas multim\u00e9dia",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Tarefas Agendadas",
     "TabMyPlugins": "As minhas extens\u00f5es",
     "TabCatalog": "Cat\u00e1logo",
-    "PluginsTitle": "Extens\u00f5es",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Atualiza\u00e7\u00f5es autom\u00e1ticas",
     "HeaderNowPlaying": "A reproduzir",
     "HeaderLatestAlbums": "\u00daltimos \u00c1lbuns",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Adicionado novo conte\u00fado",
     "NotificationOptionNewLibraryContentMultiple": "Novo conte\u00fado adicionado (m\u00faltiplo)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
-    "SendNotificationHelp": "By default, notifications are delivered to the dashboard inbox. Browse the plugin catalog to install additional notification options.",
+    "NotificationOptionUserLockedOut": "User locked out",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "\u00c9 necess\u00e1rio reiniciar o servidor",
     "LabelNotificationEnabled": "Ativar esta notifica\u00e7\u00e3o",
     "LabelMonitorUsers": "Monitor activity from:",
@@ -976,7 +991,7 @@
     "LabelAutomaticallyDonate": "Automatically donate this amount every month",
     "LabelAutomaticallyDonateHelp": "You can cancel at any time via your PayPal account.",
     "OptionList": "List",
-    "TabDashboard": "Dashboard",
+    "TabDashboard": "Painel Principal",
     "TitleServer": "Server",
     "LabelCache": "Cache:",
     "LabelLogs": "Logs:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Box",
     "OptionBoxRear": "Box rear",
     "OptionDisc": "Disc",
+    "OptionIcon": "Icon",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Screenshot",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Subtitles failed to download for {0}",
     "LabelRunningTimeValue": "Running time: {0}",
     "LabelIpAddressValue": "Ip address: {0}",
+    "UserLockedOutWithName": "User {0} has been locked out",
     "UserConfigurationUpdatedWithName": "User configuration has been updated for {0}",
     "UserCreatedWithName": "User {0} has been created",
     "UserPasswordChangedWithName": "Password has been changed for user {0}",
@@ -1321,7 +1338,7 @@
     "MessageNoServersAvailableToConnect": "No servers are available to connect to. If you've been invited to share a server, make sure to accept it below or by clicking the link in the email.",
     "TitleNewUser": "New User",
     "ButtonConfigurePassword": "Configure Password",
-    "HeaderDashboardUserPassword": "User passwords are managed within each user's personal profile settings.",
+    "HeaderDashboardUserPassword": "As senhas do utilizador s\u00e3o geridas dentro das prefer\u00eancias do seu perfil pessoal.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
     "HeaderLatestItems": "Latest Items",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Jobs",
     "TabSyncJobs": "Sync Jobs",
     "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well.",
+    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
+    "MessageReenableUser": "See below to reenable"
 }
