--- a/MediaBrowser.Server.Implementations/Localization/Server/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/sv.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
     "ButtonConvertMedia": "Convert media",
     "ButtonOrganize": "Organize",
+    "LabelPinCode": "Pin code:",
     "ButtonOk": "OK",
     "ButtonCancel": "Avbryt",
+    "ButtonExit": "Exit",
     "ButtonNew": "Nytillkommet",
     "HeaderTV": "TV",
     "HeaderAudio": "Ljud",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Paths",
     "CategorySync": "Sync",
     "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "Register with PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
     "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "Om aktiverad, kommer filer med .rar och .zip f\u00f6rl\u00e4ngningar att uppt\u00e4ckas som mediefiler.",
     "LabelEnterConnectUserName": "Anv\u00e4ndarnamn eller email:",
     "LabelEnterConnectUserNameHelp": "This is your Media Browser online account user name or password.",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Synk jobb",
     "FolderTypeMixed": "Blandat inneh\u00e5ll",
     "FolderTypeMovies": "Filmer",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "Se avsnittet om mediabibliotek i v\u00e5r Wiki.",
     "LabelCountry": "Land:",
     "LabelLanguage": "Spr\u00e5k:",
+    "LabelTimeLimitHours": "Time limit (hours):",
     "ButtonJoinTheDevelopmentTeam": "Join the Development Team",
     "HeaderPreferredMetadataLanguage": "\u00d6nskat spr\u00e5k f\u00f6r metadata:",
     "LabelSaveLocalMetadata": "Spara grafik och metadata i mediamapparna",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Schemalagda aktiviteter",
     "TabMyPlugins": "Mina till\u00e4gg",
     "TabCatalog": "Katalog",
-    "PluginsTitle": "Till\u00e4gg",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Automatiska uppdateringar",
     "HeaderNowPlaying": "Nu spelas",
     "HeaderLatestAlbums": "Nytillkomna album",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nytt inneh\u00e5ll har tillkommit",
     "NotificationOptionNewLibraryContentMultiple": "Nytillkommet inneh\u00e5ll finns (flera objekt)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
-    "SendNotificationHelp": "Meddelanden visas f\u00f6rvalt i kontrollpanelens inkorg. S\u00f6k efter fler meddelandetill\u00e4gg i till\u00e4ggskatalogen.",
+    "NotificationOptionUserLockedOut": "User locked out",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Servern m\u00e5ste startas om",
     "LabelNotificationEnabled": "Aktivera denna meddelandetyp",
     "LabelMonitorUsers": "\u00d6vervaka aktivitet fr\u00e5n:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Box",
     "OptionBoxRear": "Box bakre",
     "OptionDisc": "Skiva",
+    "OptionIcon": "Icon",
     "OptionLogo": "Logotyp",
     "OptionMenu": "Meny",
     "OptionScreenshot": "Sk\u00e4rmdump",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Nerladdning av undertexter f\u00f6r {0} misslyckades",
     "LabelRunningTimeValue": "Speltid: {0}",
     "LabelIpAddressValue": "IP-adress: {0}",
+    "UserLockedOutWithName": "User {0} has been locked out",
     "UserConfigurationUpdatedWithName": "Anv\u00e4ndarinst\u00e4llningarna f\u00f6r {0} har uppdaterats",
     "UserCreatedWithName": "Anv\u00e4ndaren {0} har skapats",
     "UserPasswordChangedWithName": "L\u00f6senordet f\u00f6r {0} har \u00e4ndrats",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Jobs",
     "TabSyncJobs": "Synkjobb",
     "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well.",
+    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
+    "MessageReenableUser": "See below to reenable"
 }
