--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -36,6 +36,18 @@
     "MessageKeyUpdated": "Obrigado. Sua chave de colaborador foi atualizada.",
     "MessageKeyRemoved": "Obrigado. Sua chave de colaborador foi removida.",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
+    "ValueTimeLimitSingleHour": "Limite de tempo: 1 hora",
+    "ValueTimeLimitMultiHour": "Limite de tempo: {0} horas",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "Busca",
     "ValueDateCreated": "Data da cria\u00e7\u00e3o: {0}",
     "LabelArtist": "Artista",
@@ -69,12 +81,14 @@
     "ButtonAddToCollection": "Adicionar \u00e0 Cole\u00e7\u00e3o",
     "HeaderSelectCertificatePath": "Selecione o Caminho do Certificado",
     "ConfirmMessageScheduledTaskButton": "Esta opera\u00e7\u00e3o normalmente \u00e9 executada automaticamente como uma tarefa agendada. Tamb\u00e9m pode ser executada manualmente. Para configurar a tarefa agendada, veja:",
-    "HeaderSupporterBenefit": "A ades\u00e3o de colaborador fornece benef\u00edcios adicionais como acesso a plugins premium, canais de conte\u00fado da internet e mais. {0}Saiba mais{1}.",
+    "HeaderSupporterBenefit": "A ades\u00e3o de colaborador fornece benef\u00edcios adicionais como acesso a sincroniza\u00e7\u00e3o, plugins premium, canais de conte\u00fado da internet e mais. {0}Saiba mais{1}.",
     "LabelSyncNoTargetsHelp": "Parece que voc\u00ea n\u00e3o possui nenhuma app que suporta sincroniza\u00e7\u00e3o.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Bem Vindo ao Painel do Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Bem-vindo ao Cliente Web do Media Browser",
     "ButtonTakeTheTour": "Fa\u00e7a o tour",
     "HeaderWelcomeBack": "Bem-vindo novamente!",
+    "TitleSync": "Sinc",
+    "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Fa\u00e7a o tour para ver as novidades",
     "MessageNoSyncJobsFound": "Nenhuma tarefa de sincroniza\u00e7\u00e3o encontrada. Crie uma tarefa de sincroniza\u00e7\u00e3o usando os bot\u00f5es Sincroniza\u00e7\u00e3o encontrados na interface web.",
     "HeaderLibraryAccess": "Acesso \u00e0 Biblioteca",
@@ -95,6 +109,10 @@
     "LabelVersionInstalled": "{0} instalado",
     "LabelNumberReviews": "{0} Cr\u00edticas",
     "LabelFree": "Gr\u00e1tis",
+    "HeaderPlaybackError": "Erro na Reprodu\u00e7\u00e3o",
+    "MessagePlaybackErrorNotAllowed": "Voc\u00ea n\u00e3o est\u00e1 autorizado a reproduzir este conte\u00fado. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
+    "MessagePlaybackErrorNoCompatibleStream": "N\u00e3o existem streams compat\u00edveis dispon\u00edveis. Por favor, tente novamente mais tarde.",
+    "MessagePlaybackErrorRateLimitExceeded": "Seu limite da taxa de reprodu\u00e7\u00e3o foi excedido. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
     "HeaderSelectAudio": "Selecione \u00c1udio",
     "HeaderSelectSubtitles": "Selecione Legendas",
     "ButtonMarkForRemoval": "Remover do dispositivo",
