--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -36,6 +36,18 @@
     "MessageKeyUpdated": "\u8c22\u8c22\u3002\u4f60\u7684\u652f\u6301\u8005\u5e8f\u53f7\u5df2\u66f4\u65b0\u3002",
     "MessageKeyRemoved": "\u8c22\u8c22\u3002\u4f60\u7684\u652f\u6301\u8005\u5e8f\u53f7\u5df2\u79fb\u9664\u3002",
     "ErrorLaunchingChromecast": "\u542f\u52a8chromecast\u9047\u5230\u9519\u8bef\uff0c\u8bf7\u786e\u8ba4\u8bbe\u5907\u5df2\u7ecf\u8fde\u63a5\u5230\u4f60\u7684\u65e0\u7ebf\u7f51\u7edc\u3002",
+    "ValueTimeLimitSingleHour": "Time limit: 1 hour",
+    "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "\u641c\u7d22",
     "ValueDateCreated": "\u521b\u5efa\u65e5\u671f\uff1a {0}",
     "LabelArtist": "\u827a\u672f\u5bb6",
@@ -69,12 +81,14 @@
     "ButtonAddToCollection": "\u6dfb\u52a0\u5230\u6536\u85cf",
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "\u6b64\u64cd\u4f5c\u901a\u5e38\u662f\u901a\u8fc7\u8ba1\u5212\u4efb\u52a1\u81ea\u52a8\u8fd0\u884c\u3002\u5b83\u4e5f\u53ef\u624b\u52a8\u8fd0\u884c\u3002\u8981\u914d\u7f6e\u8ba1\u5212\u4efb\u52a1\uff0c\u8bf7\u53c2\u9605\uff1a",
-    "HeaderSupporterBenefit": "\u652f\u6301\u8005\u4f1a\u5458\u4f1a\u5f97\u5230\u989d\u5916\u7684\u597d\u5904\uff0c\u5982\u83b7\u5f97\u9ad8\u7ea7\u63d2\u4ef6\uff0c\u4e92\u8054\u7f51\u9891\u9053\u5185\u5bb9\uff0c\u7b49\u7b49\u3002{0}\u4e86\u89e3\u8be6\u60c5{1} \u3002",
+    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "\u6b22\u8fce\u6765\u5230Media Browser\u63a7\u5236\u53f0",
     "HeaderWelcomeToMediaBrowserWebClient": "\u6b22\u8fce\u8fdb\u5165Media Browser Web\u5ba2\u6237\u7aef",
     "ButtonTakeTheTour": "\u8fdb\u884c\u53c2\u89c2",
     "HeaderWelcomeBack": "\u6b22\u8fce\u56de\u6765\uff01",
+    "TitleSync": "\u540c\u6b65",
+    "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "\u8fdb\u884c\u53c2\u89c2\uff0c\u770b\u770b\u6709\u4ec0\u4e48\u65b0\u4e1c\u897f",
     "MessageNoSyncJobsFound": "\u6ca1\u6709\u53d1\u73b0\u540c\u6b65\u4f5c\u4e1a\u3002\u4f7f\u7528Web\u754c\u9762\u4e2d\u7684\u540c\u6b65\u6309\u94ae\u6765\u521b\u5efa\u540c\u6b65\u4f5c\u4e1a\u3002",
     "HeaderLibraryAccess": "Library Access",
@@ -95,6 +109,10 @@
     "LabelVersionInstalled": "{0} \u5df2\u5b89\u88c5",
     "LabelNumberReviews": "{0} \u8bc4\u8bba",
     "LabelFree": "\u514d\u8d39",
+    "HeaderPlaybackError": "Playback Error",
+    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "HeaderSelectAudio": "\u9009\u62e9\u97f3\u9891",
     "HeaderSelectSubtitles": "\u9009\u62e9\u5b57\u5e55",
     "ButtonMarkForRemoval": "Remove from device",
