--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "\u5982\u679c\u4ece\u6e90\u8fd0\u884c\u670d\u52a1\u5668\uff0c\u8bf7\u6307\u5b9a\u63a7\u5236\u53f0UI\u6587\u4ef6\u5939\u8def\u5f84\u3002\u8fd9\u4e2a\u6587\u4ef6\u5939\u5c06\u63d0\u4f9bWeb\u5ba2\u6237\u7aef\u7684\u6240\u6709\u6587\u4ef6\u3002",
     "ButtonConvertMedia": "\u5a92\u4f53\u8f6c\u6362",
     "ButtonOrganize": "\u6574\u7406",
+    "LabelPinCode": "Pin code:",
     "ButtonOk": "\u786e\u5b9a",
     "ButtonCancel": "\u53d6\u6d88",
+    "ButtonExit": "Exit",
     "ButtonNew": "\u65b0\u589e",
     "HeaderTV": "\u7535\u89c6",
     "HeaderAudio": "\u97f3\u9891",
@@ -57,6 +59,15 @@
     "HeaderPaths": "\u8def\u5f84",
     "CategorySync": "\u540c\u6b65",
     "HeaderEasyPinCode": "\u7b80\u6613Pin\u7801",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "\u6ce8\u518cPayPal",
     "HeaderSyncRequiresSupporterMembership": "\u540c\u6b65\u9700\u8981\u652f\u6301\u8005\u4f1a\u5458",
     "HeaderEnjoyDayTrial": "\u4eab\u53d714\u5929\u514d\u8d39\u8bd5\u7528",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "\u5982\u679c\u542f\u7528\uff0c\u4e0e.RAR\u548c.zip\u6269\u5c55\u540d\u7684\u6587\u4ef6\u5c06\u88ab\u68c0\u6d4b\u4e3a\u5a92\u4f53\u6587\u4ef6\u3002",
     "LabelEnterConnectUserName": "\u7528\u6237\u540d\u6216\u7535\u5b50\u90ae\u4ef6\uff1a",
     "LabelEnterConnectUserNameHelp": "\u8fd9\u662f\u4f60\u7684Media Browser\u5728\u7ebf\u5e10\u6237\u7684\u7528\u6237\u540d\u6216\u5bc6\u7801\u3002",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "\u540c\u6b65\u4f5c\u4e1a",
     "FolderTypeMixed": "\u6df7\u5408\u5185\u5bb9",
     "FolderTypeMovies": "\u7535\u5f71",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "\u8bf7\u53c2\u9605\u5a92\u4f53\u5e93\u7ef4\u57fa\u3002",
     "LabelCountry": "\u56fd\u5bb6\uff1a",
     "LabelLanguage": "\u8bed\u8a00\uff1a",
+    "LabelTimeLimitHours": "Time limit (hours):",
     "ButtonJoinTheDevelopmentTeam": "\u52a0\u5165\u5f00\u53d1\u56e2\u961f",
     "HeaderPreferredMetadataLanguage": "\u9996\u9009\u5a92\u4f53\u8d44\u6599\u8bed\u8a00\uff1a",
     "LabelSaveLocalMetadata": "\u4fdd\u5b58\u5a92\u4f53\u56fe\u50cf\u53ca\u8d44\u6599\u5230\u5a92\u4f53\u6240\u5728\u6587\u4ef6\u5939",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "\u8ba1\u5212\u4efb\u52a1",
     "TabMyPlugins": "\u6211\u7684\u63d2\u4ef6",
     "TabCatalog": "\u76ee\u5f55",
-    "PluginsTitle": "\u63d2\u4ef6",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "\u81ea\u52a8\u66f4\u65b0",
     "HeaderNowPlaying": "\u6b63\u5728\u64ad\u653e",
     "HeaderLatestAlbums": "\u6700\u65b0\u4e13\u8f91",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "\u6dfb\u52a0\u65b0\u5185\u5bb9",
     "NotificationOptionNewLibraryContentMultiple": "\u65b0\u7684\u5185\u5bb9\u52a0\u5165\uff08\u591a\u4e2a\uff09",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
-    "SendNotificationHelp": "\u9ed8\u8ba4\u60c5\u51b5\u4e0b\uff0c\u901a\u77e5\u88ab\u53d1\u9001\u5230\u63a7\u5236\u53f0\u7684\u6536\u4ef6\u7bb1\u3002\u6d4f\u89c8\u63d2\u4ef6\u76ee\u5f55\u53ef\u4ee5\u5b89\u88c5\u989d\u5916\u7684\u901a\u77e5\u9009\u9879\u3002",
+    "NotificationOptionUserLockedOut": "User locked out",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "\u9700\u8981\u91cd\u65b0\u542f\u52a8\u670d\u52a1\u5668",
     "LabelNotificationEnabled": "\u542f\u7528\u6b64\u901a\u77e5",
     "LabelMonitorUsers": "\u76d1\u63a7\u6d3b\u52a8\uff1a",
@@ -1048,6 +1063,7 @@
     "OptionBox": "\u5305\u88c5\u76d2\u6b63\u9762\u56fe",
     "OptionBoxRear": "\u5305\u88c5\u76d2\u80cc\u9762\u56fe",
     "OptionDisc": "\u5149\u76d8",
+    "OptionIcon": "Icon",
     "OptionLogo": "\u6807\u5fd7",
     "OptionMenu": "\u83dc\u5355",
     "OptionScreenshot": "\u5c4f\u5e55\u622a\u56fe",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "\u4e3a {0} \u4e0b\u8f7d\u5b57\u5e55\u5931\u8d25",
     "LabelRunningTimeValue": "\u8fd0\u884c\u65f6\u95f4\uff1a {0}",
     "LabelIpAddressValue": "Ip \u5730\u5740\uff1a {0}",
+    "UserLockedOutWithName": "User {0} has been locked out",
     "UserConfigurationUpdatedWithName": "\u7528\u6237\u914d\u7f6e\u5df2\u66f4\u65b0\u4e3a {0}",
     "UserCreatedWithName": "\u7528\u6237 {0} \u5df2\u88ab\u521b\u5efa",
     "UserPasswordChangedWithName": "\u5df2\u4e3a\u7528\u6237 {0} \u66f4\u6539\u5bc6\u7801",
@@ -1353,5 +1370,7 @@
     "TabJobs": "\u4f5c\u4e1a",
     "TabSyncJobs": "\u540c\u6b65\u4f5c\u4e1a",
     "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well.",
+    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
+    "MessageReenableUser": "See below to reenable"
 }
