--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_TW.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_TW.json
@@ -48,8 +48,10 @@
     "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
     "ButtonConvertMedia": "Convert media",
     "ButtonOrganize": "Organize",
+    "LabelPinCode": "Pin code:",
     "ButtonOk": "OK",
     "ButtonCancel": "\u53d6\u6d88",
+    "ButtonExit": "Exit",
     "ButtonNew": "\u5275\u5efa",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -57,6 +59,15 @@
     "HeaderPaths": "Paths",
     "CategorySync": "Sync",
     "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "Register with PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
     "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
@@ -70,6 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "If enabled, files with .rar and .zip extensions will be detected as media files.",
     "LabelEnterConnectUserName": "User name or email:",
     "LabelEnterConnectUserNameHelp": "This is your Media Browser online account user name or password.",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Sync Job",
     "FolderTypeMixed": "Mixed content",
     "FolderTypeMovies": "Movies",
@@ -90,6 +103,7 @@
     "ReferToMediaLibraryWiki": "\u53c3\u7167\u5a92\u9ad4\u5eab\u7ef4\u57fa",
     "LabelCountry": "\u570b\u5bb6\uff1a",
     "LabelLanguage": "\u8a9e\u8a00\uff1a",
+    "LabelTimeLimitHours": "Time limit (hours):",
     "ButtonJoinTheDevelopmentTeam": "Join the Development Team",
     "HeaderPreferredMetadataLanguage": "\u9996\u9078\u5a92\u9ad4\u8cc7\u6599\u8a9e\u8a00\uff1a",
     "LabelSaveLocalMetadata": "\u4fdd\u5b58\u5a92\u9ad4\u5716\u50cf\u53ca\u8cc7\u6599\u5230\u5a92\u9ad4\u6a94\u6848\u6240\u5728\u7684\u6587\u4ef6\u593e",
@@ -212,7 +226,7 @@
     "ScheduledTasksTitle": "Scheduled Tasks",
     "TabMyPlugins": "\u6211\u7684\u63d2\u4ef6",
     "TabCatalog": "\u76ee\u9304",
-    "PluginsTitle": "\u63d2\u4ef6",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "\u81ea\u52d5\u66f4\u65b0",
     "HeaderNowPlaying": "\u6b63\u5728\u64ad\u653e",
     "HeaderLatestAlbums": "\u6700\u65b0\u5c08\u8f2f",
@@ -667,7 +681,8 @@
     "NotificationOptionNewLibraryContent": "New content added",
     "NotificationOptionNewLibraryContentMultiple": "New content added (multiple)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
-    "SendNotificationHelp": "By default, notifications are delivered to the dashboard inbox. Browse the plugin catalog to install additional notification options.",
+    "NotificationOptionUserLockedOut": "User locked out",
+    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Server restart required",
     "LabelNotificationEnabled": "Enable this notification",
     "LabelMonitorUsers": "Monitor activity from:",
@@ -1048,6 +1063,7 @@
     "OptionBox": "Box",
     "OptionBoxRear": "Box rear",
     "OptionDisc": "Disc",
+    "OptionIcon": "Icon",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Screenshot",
@@ -1092,6 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Subtitles failed to download for {0}",
     "LabelRunningTimeValue": "Running time: {0}",
     "LabelIpAddressValue": "Ip address: {0}",
+    "UserLockedOutWithName": "User {0} has been locked out",
     "UserConfigurationUpdatedWithName": "User configuration has been updated for {0}",
     "UserCreatedWithName": "User {0} has been created",
     "UserPasswordChangedWithName": "Password has been changed for user {0}",
@@ -1353,5 +1370,7 @@
     "TabJobs": "Jobs",
     "TabSyncJobs": "Sync Jobs",
     "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well.",
+    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
+    "MessageReenableUser": "See below to reenable"
 }
